resolve  #7896 Contrast Theme - Elements must meet minimum color contrast ratio thresholds

--- a/packages/survey-creator-core/src/property-grid-theme/blocks/spg-question.scss
+++ b/packages/survey-creator-core/src/property-grid-theme/blocks/spg-question.scss
@@ -164,7 +164,7 @@
     border-inline-end: var(--ctr-editor-label-separator-width, var(--sjs-stroke-x1)) solid
       var(--ctr-editor-label-separator-color, var(--sjs-border-10, #dcdcdcff));
     display: inline-block;
-    color: var(--ctr-editor-label-color, var(--sjs-layer-3-foreground-50, #00000080));
+    color: var(--ctr-editor-label-color, var(--sjs-layer-3-foreground-75, #000000bf));
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
